--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -23,7 +23,8 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
+                type: yml
+                # dir: '%kernel.project_dir%/src/Entity'
+                dir: '%kernel.project_dir%/config/doctrine'
                 prefix: 'App\Entity'
                 alias: App
